<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafetyNet</string>
    <string name="sign_out_button">Sign out</string>
    <string name="logoutBtn">logout</string>
    <string name="login_user_cancelled">Login Cancelled</string>
    <string name="login_no_network">No Network Connection</string>
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_user">User</string>
    <string name="menu_drawer_logout">Logout</string>
    <string name="menu_drawer_groups">New Group</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_payment">Payment</string>
    <string name="menu_drawer_payout">Payout</string>
    <string name="main_nav_header">SafetyNet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groupName">Group Name</string>
    <string name="createGroupButton">Create Group</string>

    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>

    <string name="payment_test_response">Response</string>
    <string name="payment_test_button">Make Request</string>
    <string name="payment_last_used_dialog_title">Use last payment method?</string>
    <string name="payment_last_used_yes_btn">Yes, Use this</string>
    <string name="payment_last_used_no_btn">No</string>

    <string name="confirm">Confirm</string>
    <string name="amount">Dollar Amount</string>
    <string name="withdrawal_question">How much to withdrawal?</string>
    <string name="deposit_question">How much to deposit?</string>
    <string name="group_withdrawal">Withdrawal</string>
    <string name="group_deposit">Deposit</string>
    <string name="welcome_message">Welcome to SafetyNet!</string>
    <string name="group_balance">Group Balance</string>
    <string name="group_history">Group Transactions</string>
    <string name="edit_group">Edit Group Settings</string>
    <string name="user_history">Personal Transactions</string>
    <string name="user_ID">User ID</string>
    <string name="payment_time">Payment Time</string>
    <string name="payment_time_days">Payment Time (Days)</string>
    <string name="withdrawal_limit">Withdrawal Limit</string>


    <string name="add_admin">Add user as Admin</string>
    <string name="add_user">Add a new user</string>
    <string name="remove_user">Remove user</string>
    <string name="remove_admin">Remove admin</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="add_user_hint">New user\'s email</string>
    <string name="user_email">New user\'s email</string>
    <string name="leave_group">Leave Group</string>

    <string name="confirm2">Confirm</string>
    <string name="withdrawal_question2">How much to withdrawal?</string>
    <string name="withdrawal_hint">Dollar amount for withdrawl</string>
    <string name="deposit_question2">How much to deposit?</string>
    <string name="deposit_hint">Dollar amount for deposit</string>
    <string name="payment_time_hint">Number of days to repay a withdrawal</string>
    <string name="withdrawal_limit_hint">Dollar amount for maximum withdrawal</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_user">Transaction User</string>
    <string name="transaction_group">Transaction Group</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_timestamp">Transaction Timestamp</string>
    <string name="timestamp_label">Transaction took place on</string>
    <string name="repayment_timestamp">Repayment Timestamp</string>
    <string name="repayment_label">Payout should be payed back by</string>


</resources>
