<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_round_home_24px"
        android:title="@string/menu_drawer_home"/>
    <item
        android:id="@+id/nav_groups"
        android:title="@string/menu_drawer_groups" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/menu_drawer_settings" />
    <item
        android:id="@+id/nav_payment"
        android:title="@string/menu_drawer_payment"/>
    <item
        android:id="@+id/nav_payout"
        android:title="@string/menu_drawer_payout"/>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_drawer_logout" />
    <item
        android:id="@+id/nav_edit_user"
        android:title="Edit User" />
</menu>