<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewGroupID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupName"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="58dp" />

    <Spinner
        android:id="@+id/spinnerUsers"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAdmins"
        tools:layout_editor_absoluteX="8dp" />

    <Spinner
        android:id="@+id/spinnerAdmins"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/editTextWithdrawalLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/withdrawal_limit_hint"
        android:inputType="numberDecimal"
        android:text="@string/withdrawal_limit"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="149dp" />

    <EditText
        android:id="@+id/editTextRepayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/payment_time_hint"
        android:inputType="number"
        android:text="@string/payment_time"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="93dp" />
</android.support.constraint.ConstraintLayout>